--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,7 @@ a.active{
 aside select {
     @apply w-full my-2 bg-blue-100 px-4 py-1 rounded-xl mb-4
 }
+
+.blog-container li {
+    @apply my-1
+}
